--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<video autoplay muted loop id="backgroundVideo">
-        <source src="https://www.youtube.com/watch?v=uECwWs5PfUo&t=11s" type="video/mp4">
+        <source src="background.jpg" type="video/mp4">
     </video>
 	<div class="header-wrapper">
 		<div class="header">
